--- a/web/styles.css
+++ b/web/styles.css
@@ -94,3 +94,74 @@ h1{
     background-color: white;
 
 }
+
+div.main{
+	max-width: 70%;
+    height: auto; 
+    min-height:100%;
+    margin: auto;
+    padding: 20px;
+    margin-top: 20px;
+    background-color:#65C7E7;
+}
+
+label {
+    float: left;
+    text-align: right;
+    margin-right: 15px;
+    width: 150px;
+    padding-top: 10px;
+    font-size: 1.4em;
+    color: white; 
+    font-family: 'Raleway',sans-serif; 
+}
+
+
+input[type=text], select {
+    width: 75%;
+    padding: 6px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 1.2em;
+    color: black; 
+    font-family: 'Raleway',sans-serif; 
+}
+
+input[type=password], select {
+    width: 50%;
+    padding: 6px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 0.9em;
+    color: black; 
+    font-family: 'Raleway',sans-serif; 
+}
+
+    
+input[type=radio], select {
+    font-size: 1.2em;
+    color: white; 
+    font-family: 'Raleway',sans-serif; 
+}
+
+input[type=submit] {
+    background-color: #1E90FF; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 8px;
+    display:block;
+
+}
+
+span { display: block; margin: 0 0 3px; font-size: 1.2em; font-weight: bold; }
