--- a/web/styles.css
+++ b/web/styles.css
@@ -165,3 +165,14 @@ input[type=submit] {
 }
 
 span { display: block; margin: 0 0 3px; font-size: 1.2em; font-weight: bold; }
+
+button {
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+}
