Log in as a staff member working

--- a/web/styles.css
+++ b/web/styles.css
@@ -11,7 +11,7 @@ and open the template in the editor.
 h1{
     font-family: candara;
     font-size: 45px;
-    color: White;
+    color: white;
 }
 
 .navBar{
