--- a/web/styles.css
+++ b/web/styles.css
@@ -16,9 +16,9 @@ h1{
 }
 
 .navBar{
-    height: 40%;
+    height: 90px;;
     width: 100%;
-    background-color: black;
+    background-color: #042356;
     margin: 0 auto;
     text-align: center;
     text-color: white;
@@ -44,9 +44,9 @@ h1{
     display: block;
     padding: 10px 15px; 
     margin: 0;
-    font-family: Candara;
+    font-family: segoe marker;
     color: white;
-    font-size: 45px;
+    font-size: 55px;
     font-weight: bold;
 }
 
@@ -54,7 +54,7 @@ h1{
 .navBar1{
     height: 50px;
     width: 100%;
-    background-color: #696D6E;
+    background-color: #25619f;
     margin: 0 auto;
     text-align: center;
     text-color: white;
@@ -80,6 +80,7 @@ h1{
     padding: 10px 15px; 
     margin: 0;
     font-family: Candara;
+    font-weight: bold;
     color: white;
     font-size: 22px;
 
@@ -168,12 +169,35 @@ input[type=submit] {
 span { display: block; margin: 0 0 3px; font-size: 1.2em; font-weight: bold; }
 
 button {
-    background-color: black;
+    background-color: #042356;
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: block;
+    display: inline-block;
     font-size: 16px;
 }
+#sec-button{
+      background-color: #25619f;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+#third-button{
+    background-color: #b71010;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+   display:inline-block;
+    font-size: 16px;
+}
+
+
+
