--- a/web/styles.css
+++ b/web/styles.css
@@ -10,9 +10,24 @@ and open the template in the editor.
 
 h1{
     font-family: candara;
-    font-size: 45px;
-    color: white;
+    font-size: 130px;
+    color: White;
+    text-align: center;
 }
+
+h3{
+    color: white;
+    font-family: candara;
+    font-size: 20px;
+}
+
+h4{
+    color: white;
+    font-family: candara;
+    text-align: left;
+    font-size: 15px;
+}
+
 
 .navBar{
     height: 40%;
@@ -96,7 +111,7 @@ h1{
 }
 
 div.main{
-	max-width: 70%;
+    max-width: 70%;
     height: auto; 
     min-height:100%;
     margin: auto;
@@ -176,3 +191,21 @@ button {
     display: block;
     font-size: 16px;
 }
+
+div1{
+    position: relative;
+    width: 100px;
+    height: 100px;
+}
+
+#div1{
+   width: 40%;
+   margin: 40%;
+   color: #042356;
+   padding: 0% 0%;
+   position: relative;
+   top: -1400px;
+   left: 130px;
+}
+
+
