--- a/web/styles.css
+++ b/web/styles.css
@@ -17,7 +17,7 @@ h1{
     margin: 2%;
 }
 
-h3{
+h4{
     color: white;
     font-family: candara;
     text-align: left;
@@ -30,8 +30,7 @@ h5{
     text-align: center;
 }
 
-h4{
-    color: white;
+a{
     font-family: candara;
     font-size: 15px;
 }
