--- a/web/styles.css
+++ b/web/styles.css
@@ -235,7 +235,7 @@ button {
 
 
 #sec-button{
-    background-color: #25619f;
+    background-color: #042356;
     color: white;
     padding: 15px 32px;
     text-align: center;
@@ -267,7 +267,7 @@ button {
 }
 
 #fourth-button{
-    background-color: #25619f;
+    background-color: #25619f;;
     color: white;
     padding: 15px 32px;
     text-align: center;
@@ -275,7 +275,7 @@ button {
     display: inline-block;
     font-size: 20px;
     border: 2px solid #042356;
-    border-radius: 15px;
+    border-radius: 25px;
     margin-left: 50px;
     width: 80%;
 
@@ -332,7 +332,7 @@ button {
 	float: left;
 	height: 30%;
 	overflow: auto;
-       background: #042356;
+        background: #25619f;
         align-content: center;
 
 }
