--- a/web/styles.css
+++ b/web/styles.css
@@ -22,6 +22,7 @@ h2{
     font-weight: bold;
     margin:10px;
    
+   
 }
 
 h3{
@@ -45,6 +46,24 @@ h5{
     font-family: candara;
     font-size: 20px;
     text-align: center;
+}
+h6{
+      color: red;
+    font-family: candara;
+    font-size: 30px;
+    font-weight: bold;
+     margin:10px;
+    margin: 2%;
+}
+
+h7{
+      color: white;
+    font-family: candara;
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
+    display: block;
+    margin: auto;
 }
 
 a{
@@ -240,11 +259,11 @@ button {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     font-size: 20px;
     border: 2px solid #042356;
     border-radius: 25px;
-    margin-left: 50px;
+    margin: auto;
     width: 80%;
 
 }
@@ -254,17 +273,17 @@ button {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     font-size: 20px;
     border: 1px solid #042356;
-    border-radius: 25px;
-    margin-left: 50px;
+    
+    margin: auto;
     width: 80%;
+    
     
 }
 
-.centerContent2{
-}
+
 
 #fourth-button{
     background-color: #25619f;;
@@ -272,12 +291,12 @@ button {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     font-size: 20px;
-    border: 2px solid #042356;
-    border-radius: 25px;
-    margin-left: 50px;
+    border: 1px solid #042356;
+    margin: auto;
     width: 80%;
+    
 
 }
 
@@ -321,10 +340,7 @@ button {
 	overflow: auto;
         background: #d3dfeb;
         align-content: center;
-        
-        
-            
-        
+          
 }
 #cc3{
     
