--- a/web/styles.css
+++ b/web/styles.css
@@ -238,6 +238,10 @@ input[type=submit] {
     display:block;
 
 }
+select1{
+    
+    
+}
 
 span { display: block; margin: 0 0 3px; font-size: 1.2em; font-weight: bold; }
 
@@ -339,7 +343,8 @@ button {
 	height: 30%;
 	overflow: auto;
         background: #d3dfeb;
-        align-content: center;
+       
+       
           
 }
 #cc3{
