Got rid of red box below displaying list of quizzes

--- a/web/styles.css
+++ b/web/styles.css
@@ -171,6 +171,11 @@ a:active {
 
 }
 
+   .chart div {
+             
+               
+            }
+
 div.main{
     max-width: 70%;
     height: auto; 
