--- a/web/styles.css
+++ b/web/styles.css
@@ -171,12 +171,18 @@ a:active {
 
 }
 chart_div{
-    width: 60%;		/*welcome message is 50% width of centreContent div*/
+/*    width: 60%;		welcome message is 50% width of centreContent div
 	float: left;
 	height: 30%;
 	overflow: auto;
         display:inline-block;
-        margin:0 auto;
+        margin:0 auto;*/
+
+width: 60%;		/*welcome message is 50% width of centreContent div*/
+	float: left;
+	height: 30%;
+	overflow: auto;
+       
     
 }
 
@@ -407,6 +413,30 @@ button {
         align-content: center;
         margin-top: 30px;
 
+}
+#graph{
+    
+        width: 100%;		/*welcome message is 50% width of centreContent div*/
+	float: left;
+	height: 30%;
+
+
+        align-content: center;
+        margin-top: 30px;
+
+}
+
+#table{
+    width: 100%;		/*welcome message is 50% width of centreContent div*/
+	float: left;
+	height: 30%;
+
+}
+
+
+
+.push{
+    clear:both;
 }
 
 
