--- a/web/styles.css
+++ b/web/styles.css
@@ -81,6 +81,12 @@ h7{
     margin: auto;
 }
 
+h8{
+    color: white;
+    font-family: candara;
+    font-size: 25px;
+}
+
 a{
     font-family: 'candara';
     font-size: 15px;
@@ -248,9 +254,9 @@ input[type=password] {
 
     
 input[type=radio] {
-    font-size: 1.2em;
-    color: white; 
-    font-family: 'Raleway',sans-serif; 
+    font-size: 20px;
+    font-family: candara; 
+    color: white;
 }
 
 input[type=submit] {
@@ -264,9 +270,10 @@ input[type=submit] {
     font-size: 16px;
     border-radius: 8px;
     display:block;
-     margin: auto;
+    margin: auto;
 
 }
+
 
 select {
     background-color: #25619f;
