--- a/web/styles.css
+++ b/web/styles.css
@@ -468,11 +468,13 @@ button10 {
         margin-top: 30px;
 
 }
-#graph{
+#chart_div{
     
         width: 100%;		/*welcome message is 50% width of centreContent div*/
 	float: left;
 	height: 30%;
+        width:800px;
+        height:800px;
 
 
         align-content: center;
