--- a/web/styles.css
+++ b/web/styles.css
@@ -71,7 +71,11 @@ h7{
 }
 
 h8{
-    font-size: 25px;
+     color: white;
+    font-size: 22px;
+    margin:10px;
+    margin: 2%;
+    
 }
 
 h10{
@@ -239,6 +243,7 @@ input[type=submit] {
     border-radius: 8px;
     display:block;
     margin: auto;
+    align-content: center;
     -webkit-appearance: none;
     
 }
@@ -257,6 +262,10 @@ select {
 }
 
 span { display: block; margin: 0 0 3px; font-size: 1.2em; font-weight: bold; }
+.buttonHolder{
+    text-align: center; 
+    align-content: center;
+}
 
 button {
     background-color: yellow;
@@ -374,7 +383,7 @@ button10 {
         background: #d3dfeb;
 }
 #cc3{
-        width: 100%;		/*welcome message is 50% width of centreContent div*/
+        width: 100%;		
 	float: left;
 	height: 30%;
 	overflow: auto;
@@ -382,16 +391,43 @@ button10 {
         align-content: center;
         margin-top: 30px;
 }
+#cc4{
+        width: 100%;		
+	float: left;
+	height:30%;
+	overflow: auto;
+        background: #CC0000;
+    
+}
+
+#cc5{
+        width: 100%;		
+	overflow: auto;
+	height:30%;
+	align-content: center;
+        text-align: center;
+        background: #25619f;
+    
+}
+
+#cc6{
+        width: 100%;		
+	overflow: auto;
+	height:10%;
+        background: #CC0000;
+        
+}
+
 
 #chart_div{
-        width: 100%;		/*welcome message is 50% width of centreContent div*/
+        width: 100%;		
 	float: left;
 	height: 30%;
         margin-top: 30px;
 }
 
 #table{
-        width: 60%;		/*welcome message is 50% width of centreContent div*/
+        width: 100%;		
 	float: left;
 	height: 30%;
 	overflow: auto;
@@ -400,7 +436,7 @@ button10 {
 }
 
 #questions{
-	width: 50%;		/*welcome message is 50% width of centreContent div*/
+	width: 50%;		
 	float: left;
 	height: 30%;
 	overflow: auto;
@@ -408,7 +444,7 @@ button10 {
 }
 
 #result{
-        width: 40%;		/*welcome message is 50% width of centreContent div*/
+        width: 40%;		
 	float: right;
 	height: 30%;
 	overflow: auto;
@@ -417,7 +453,7 @@ button10 {
 
 #quizprofile{
         display:inline-block;
-	width: 45%;		/*welcome message is 50% width of centreContent div*/
+	width: 45%;		
 	float: left;
 	height: 30%;
         background: #042356;
